template and css

--- a/todolist/templates/base.html
+++ b/todolist/templates/base.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="container">
+        <div class="container" id="todo">
             {% block content %} {% endblock %}
         </div>
     </div>
