--- a/todolist/templates/index.html
+++ b/todolist/templates/index.html
@@ -7,12 +7,11 @@
             {% csrf_token %}
             <div class="col-lg-4 col-sm-12">
                 <label for="txtTitle">Título</label>
-                <input type="text" id="txtTitle" class="form-control" placeholder="Insira o título da tarefa"
-                    name="txtTitle" required>
+                <input type="text" id="txtTitle" placeholder="Insira o título da tarefa" name="txtTitle" required>
             </div>
             <div class="col-lg-4 col-sm-12">
                 <label for="optCategory">Categoria</label>
-                <select id="optCategory" class="form-control" name="optCategory">
+                <select id="optCategory" name="optCategory">
                     <option class="disabled" value="">Escolha uma categoria</option>
                     {% for category in categories %}
                     <option class="" value="{{ category.name }}" name="{{ category.name }}">{{ category.name }}
@@ -22,28 +21,81 @@
             </div>
             <div class="col-lg-4 col-sm-12">
                 <label for="txtDate">Data limite</label>
-                <input type="date" id="txtDate" class="form-control" name="txtDate">
+                <input type="date" id="txtDate" name="txtDate">
             </div>
             <div class="col-lg-12">
                 <label for="txtContent">Descrição</label>
-                <textarea id="txtContent" class="form-control" name="txtContent" row="10"></textarea>
+                <textarea id="txtContent" name="txtContent" row="10"></textarea>
             </div>
             <div class="container">
                 <div class="d-flex justify-content-center">
                     <div class="p-2">
-                        <button class="taskAdd" name="taskAdd" type="submit"><i class="fas fa-plus icon"></i> Adicionar Tarefa</button>
+                        <button class="taskAdd" id="taskAdd" name="taskAdd" type="submit"><i
+                                class="fas fa-plus icon"></i> Adicionar
+                            Tarefa</button>
                     </div>
                     <div class="p-2">
-                        <button class="taskDelete" name="taskDelete" formnovalidate="" type="submit"
-                        onclick="$('input#sublist').click();"><i class="far fa-trash-alt icon"></i> Deletar Tarefa</button>
+                        <button class="taskDelete" id="taskDelete" name="taskDelete" formnovalidate="" type="submit"
+                            onclick="$('input#sublist').click();"><i class="far fa-trash-alt icon"></i> Deletar
+                            Tarefa</button>
                     </div>
                     <div class="p-2">
-                        <button class="taskConclude" name="taskConclude" formnovalidate="" type="submit"
-                        onclick="$('input#sublist').click();"><i class="fas fa-check icon"></i> Concluir Tarefa</button>
+                        <button class="taskConclude" id="taskConclude" name="taskConclude" formnovalidate=""
+                            type="submit" onclick="$('input#sublist').click();"><i class="fas fa-check icon"></i>
+                            Concluir Tarefa</button>
                     </div>
                 </div>
             </div>
         </form>
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 todo">
+                <div class="container">
+                    <h2>A fazer</h2>
+                </div>
+                <ul class="tasks">
+                    {% for task in lists %}
+                    <li class="task">
+                        <div class="col-lg-2 col-sm-1 inputcheck">
+                            <input type="checkbox" class="taskCheckbox" name="taskCheckbox" id="{{ task.id }}"
+                                value="{{ task.id }}">
+                        </div>
+                        <div class="col-lg-10 col-sm-11">
+                            <label for="{{ task.id }}">{{ task.title }}</label>
+                            <span class="category-{{ task.category }}">{{ task.category }}</span>
+                            <span class="taskContent">
+                                <p>{{task.content}}</p>
+                            </span>
+                            <small class="taskDate"><i class="fa fa-calendar"></i> {{ task.created_date }} -
+                                {{ task.due_date }}</small>
+                        </div>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="col-lg-6 col-sm-12 conclude">
+                <div class="container">
+                    <h2>Concluído</h2>
+                </div>
+                <ul class="tasks">
+                    {% for task in list_conclude %}
+                    <li class="task concludetask">
+                        <div class="col-lg-2 inputcheck">
+                            <!-- <input type="checkbox" class="taskCheckbox" name="taskCheckbox" id="{{ task.id }}"
+                                value="{{ task.id }}"> -->
+                        </div>
+                        <div class="col-lg-10">
+                            <label for="{{ task.id }}">{{ task.title }}</label>
+                            <span class="category-{{ task.category }}">{{ task.category }}</span>
+                            <span class="taskContent">
+                                <p>{{task.content}}</p>
+                            </span>
+                            <small class="taskDate"><i class="fa fa-calendar"></i> {{ task.done_date }}</small>
+                        </div>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
