--- a/todolist/static/css/style.css
+++ b/todolist/static/css/style.css
@@ -93,6 +93,7 @@ button {
     background-color: #444b5a;
     border-radius: 5px;
     margin-bottom: 10px;
+    min-height: 180px;
     -webkit-box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.75);
     box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.75);
@@ -111,13 +112,17 @@ button {
 }
 
 .taskDate {
-    float: right;
     color: #c1c1c1;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
 
-.taskDateLate{
-    float: right;
+.taskDateLate {
     color: #c70d27;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
 
 .inputcheck {
@@ -133,6 +138,43 @@ button {
     color: #d6e4cc;
 }
 
-.concludetask label{
+.concludetask label {
     color: #e1ecd6;
+}
+
+.taskContent{
+    padding-bottom: 25px;
+}
+
+.taskContent input {
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.taskContent p {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.taskContent label{
+    font-size: 16px;
+    font-weight: 400;
+    position: absolute;
+    bottom: 25px;
+    right: 5px;
+}
+
+.taskContent input:focus~label {
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+.taskContent input:checked+p {
+    -webkit-line-clamp: unset;
+}
+
+.taskContent input:checked~label {
+    display: none;
 }
