--- a/todolist/templates/index.html
+++ b/todolist/templates/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-lg-12">
                 <label for="txtContent">Descrição</label>
-                <textarea id="txtContent" name="txtContent" row="10"></textarea>
+                <textarea id="txtContent" name="txtContent" rows="5"></textarea>
             </div>
             <div class="container">
                 <div class="d-flex justify-content-center">
