--- a/todolist/static/css/style.css
+++ b/todolist/static/css/style.css
@@ -142,7 +142,7 @@ button {
     color: #e1ecd6;
 }
 
-.taskContent{
+.taskContent {
     padding-bottom: 25px;
 }
 
@@ -159,7 +159,7 @@ button {
     overflow: hidden;
 }
 
-.taskContent label{
+.taskContent label {
     font-size: 16px;
     font-weight: 400;
     position: absolute;
@@ -177,4 +177,17 @@ button {
 
 .taskContent input:checked~label {
     display: none;
+}
+
+@media only screen and (max-width: 767px) {
+    .task {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .taskDateLate{
+        font-size: 11px;
+    }
 }
