--- a/todolist/static/css/style.css
+++ b/todolist/static/css/style.css
@@ -48,8 +48,9 @@ select option {
     border-color: #444857;
 }
 
-button {
+button, .login {
     background: none;
+    text-align: center;
     color: #fff;
     border: transparent;
     padding: 15px 10px;
@@ -187,6 +188,11 @@ button {
 .login{
     width: 100%;
     background-color: #444b5a;
+}
+
+.login:hover{
+    color: #fff;
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 767px) {
