--- a/todolist/templates/base.html
+++ b/todolist/templates/base.html
@@ -17,6 +17,36 @@
 </head>
 
 <body>
+    <header id="topo" class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="ml-3 logo">
+                <a class="navbar-brand" href="">
+                    <span>TodoList App</span>
+                </a>
+            </div>
+            <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0 mr-3">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}" class="top-menu">
+                            Logout
+                        </a></li>
+                    <li class="nav-item profilepic">
+                        <img src="{{ user.profile.profile_pic.url }}" class="img-fluid">
+                    </li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}" class="top-menu">
+                            Login
+                        </a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="container-fluid">
         {% block content %} {% endblock %}
     </div>
