--- a/todolist/templates/base.html
+++ b/todolist/templates/base.html
@@ -20,7 +20,7 @@
     <header id="topo" class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="ml-3 logo">
-                <a class="navbar-brand" href="">
+                <a class="navbar-brand" href="/">
                     <span>TodoList App</span>
                 </a>
             </div>
@@ -32,16 +32,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0 mr-3">
                     {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}" class="top-menu">
-                            Logout
-                        </a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'todolist' %}">Tasks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
                     <li class="nav-item profilepic">
-                        <img src="{{ user.profile.profile_pic.url }}" class="img-fluid">
+                        <a href="{% url 'update_profile' %}" class="top-menu">
+                            <img src="{{ user.profile.profile_pic.url }}" class="img-fluid">
+                        </a>
                     </li>
                     {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}" class="top-menu">
-                            Login
-                        </a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
